# reui

./: .gitignore  Cargo.toml  LICENSE.MIT  README.md  build.rs
examples/: demo.rs  glfw.rs
examples/bevy_reui/: Cargo.toml
examples/bevy_reui/src/: main.rs
examples/framework/: mod.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/nvg_demo/: Cargo.toml
examples/nvg_demo/src/: blendish.rs  canvas.rs  main.rs  run_gles.rs  run_wgpu.rs  time.rs
examples/nvg_demo/src/shader/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
examples/sup/: blendish.rs  mod.rs
reui/: Cargo.toml
reui-app/: Cargo.toml
reui-app/src/: lib.rs
reui/src/: batch.rs  canvas.rs  color.rs  geom.rs  image.rs  lib.rs  paint.rs  path.rs  picture.rs  pipeline.rs  plugin.rs  renderer.rs  shader.wgsl  tessellator.rs
reui/src/plugin/: node.rs  viewport.rs
src/: api.rs  app.rs  backend.rs  cache.rs  canvas.rs  color.rs  context.rs  counters.rs  draw_api.rs  fff.rs  fons.rs  font.rs  geom.rs  gl.rs  image.rs  images.rs  integration.rs  lib.rs  main.rs  math.rs  mem.rs  paint.rs  params.rs  path.rs  path_builder.rs  perf.rs  picture.rs  pipeline.rs  plugin.rs  recorder.rs  renderer.rs  shader.wgsl  state.rs  tessellator.rs  text.rs  transform.rs  upload_buffer.rs  util.rs  valloc.rs  viewport.rs
src/api/: images.rs  mod.rs
src/backend/: commands.rs  gl.rs  gl_backend.rs  gl_shader.rs  gl_textures.rs  gles.rs  mod.rs  paint.rs  params.rs  pipeline.rs  utils.rs
src/backend/shader/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  stencil.frag.spv
src/canvas/: geom.rs  mod.rs  paint.rs  path.rs  picture.rs  recorder.rs  text.rs
src/font/: atlas.rs  blur.rs  fff.rs  fons.rs  font_info.rs  mod.rs  stash.rs  utils.rs
src/fontstash/: atlas.rs  mod.rs
src/g/: glyph.rs  glyph.wgsl  glyph_cache.rs
src/image/: mod.rs  pipeline.rs  raster.rs
src/image_/: atlas.rs  mod.rs
src/integration/: node.rs
src/math/: color.rs  offset.rs  rect.rs  rrect.rs  size.rs  transform.rs
src/plugin/: node.rs  viewport.rs
src/shader/: image.frag  image.frag.spv  image.vert  image.vert.spv  image.vert.wgsl  mod.rs  shader.frag.spv  shader.vert  shader.vert.spv  stencil.vert  stencil.vert.spv
src/text/: font.rs  font_db.rs  mod.rs  paragraph.rs  shaper.rs  style.rs
src/text/bad/: atlas.rs  context.rs  error.rs  face.rs  mod.rs  shaper.rs  style.rs
src/text/bad/paragraph_/: builder.rs  mod.rs  placeholder.rs  style.rs
src/text/bad/stuff/: hyphenator.rs  mod.rs  word_breaker.rs
src/text/text/: convert.rs  mod.rs
src/text/textwrap/: mod.rs  word.rs  word_breaker.rs
src/vg/: color.rs  composite.rs  counters.rs  mod.rs  paint.rs  scissor.rs  state.rs  utils.rs
src/wgpu/: fill.rs  mod.rs
