[package]
name = "reui"
version = "0.0.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

description = "Renderer for User Interface"
homepage = "https://github.com/lain-dono/reui"
repository = "https://github.com/lain-dono/reui"
keywords = ["graphics"]
exclude = ["Cargo.lock", "examples/**/*", "tests/**/*", "target/**/*"]

[workspace]
members = [
    "reui-app",
    "examples/nvg_demo",
    "examples/bevy_reui",
]

[dependencies]
bevy = { version = "0.8", optional = true }

wgpu = "0.13.1"

bitflags = "1.3"
palette = "0.6"

image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

bytemuck = { version = "1", features = ["derive"] }

#glyph_brush = "0.7"

#tracing = "0.1"

# text
#fnv = "1.0.7"
#ttf-parser = "0.15"
#rustybuzz = "0.5"

#approx = "0.5"

#fontdb = "0.5"

#rust_icu_ubrk = "1"
#rust_icu_sys = "1"

#unicode-bidi = "0.3"
#unicode-segmentation = "1.6"
#unicode-linebreak = "0.1.1"
#unic-emoji-char = "0.9"
#unicode-vo = "0.1"
#unicode-script = "0.5"

#hyphenation = "0.8.3"
#generational-arena = "0.2"
#lru = { version = "0.7.1", default-features = false }


# image cache
#guillotiere = "0.6"
#etagere = "0.2"

#log = "0.4"
#memmap2 = "0.5"
#slotmap = "1"


#ab_glyph = "0.2.11"
#ahash = { version = "0.7", default-features = false, features = ["std"] }
