[workspace]
members = [
    "reui",
    "reui-app",
    "examples/nvg_demo",
    "examples/bevy_reui",
]


#glyph_brush = "0.7"

#tracing = "0.1"

# text
#fnv = "1.0.7"
#ttf-parser = "0.15"
#rustybuzz = "0.5"

#approx = "0.5"

#fontdb = "0.5"

#rust_icu_ubrk = "1"
#rust_icu_sys = "1"

#unicode-bidi = "0.3"
#unicode-segmentation = "1.6"
#unicode-linebreak = "0.1.1"
#unic-emoji-char = "0.9"
#unicode-vo = "0.1"
#unicode-script = "0.5"

#hyphenation = "0.8.3"
#generational-arena = "0.2"
#lru = { version = "0.7.1", default-features = false }


# image cache
#guillotiere = "0.6"
#etagere = "0.2"

#log = "0.4"
#memmap2 = "0.5"
#slotmap = "1"


#ab_glyph = "0.2.11"
#ahash = { version = "0.7", default-features = false, features = ["std"] }
