[package]
name = "reui-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
winit = "0.26.0"
futures = "0.3"

tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.4"
pollster = "0.2"
wgpu-subscriber = "0.1"
