[package]
name = "reui-app"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16"
winit = "0.28.0"
futures = "0.3"

tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.4"
pollster = "0.3"
wgpu-subscriber = "0.1"
