[package]
name = "reui"
version = "0.3.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

description = "Renderer for User Interface"
homepage = "https://github.com/lain-dono/reui"
repository = "https://github.com/lain-dono/reui"
keywords = ["graphics"]
exclude = ["Cargo.lock", "examples/**/*", "tests/**/*", "target/**/*"]

[dependencies]
bevy = { version = "0.12", optional = true }
bytemuck = { version = "1", features = ["derive"] }
wgpu = "0.17"
bitflags = "2.4"
palette = "0.7"