[package]
name = "bevy_reui"
version = "0.1.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reui = { path = "../../reui", features = ["bevy"] }
bevy = "0.11"