[package]
name = "nvg_demo"
version = "0.1.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
wgpu_vg = { path = "../.." }

wgpu = "0.5.0"
winit = "0.22.1"
futures = "0.3"
env_logger = "0.7"
rayon = "1.3"

#thread_profiler = { version = "0.3.0", optional = true }
thread_profiler = { version = "0.3.0" }

[features]
default = []
profiler = ["thread_profiler/thread_profiler"]
