[package]
name = "nvg_demo"
version = "0.1.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
reui = { path = "../../reui" }
reui-app = { path = "../../reui-app" }

tracing = "0.1"
tracing-subscriber = "0.3"

image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
